# lamnek

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
scripts/: lamnek-simple.sh  lamnek.sh
src/lamnek/: __init__.py  asr.py  audio.py  cli.py  cuda_setup.py  diarization.py  formats.py  lamnek.py  merge.py  preview.py
tests/: __init__.py  test_cuda_setup.py  test_formats.py  test_merge.py
