[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lamnek"
version = "2.0.0"
description = "Wissenschaftliche Interview-Transkription: Diarization, ASR, Lamnek/Krell-Format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "hendrikmauro" },
]
keywords = [
    "transcription",
    "asr",
    "diarization",
    "whisper",
    "lamnek",
    "interview",
    "science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.0.0",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
lamnek = "lamnek.cli:cli"
lamnek-simple = "lamnek.cli:simple_cli"

[project.urls]
Homepage = "https://github.com/hendrikmauro/lamnek"
Repository = "https://github.com/hendrikmauro/lamnek"
Issues = "https://github.com/hendrikmauro/lamnek/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lamnek"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "PTH",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
